<resources>
    <string name="app_name">VICEWork</string>
    <string name="add_a_job">ADD A JOB</string>
    <string name="search_a_job">SEARCH A JOB</string>
    <string name="add_a_new_job">ADD A NEW JOB</string>
    <string name="job_name">JOB NAME</string>
    <string name="job_price">JOB PRICE</string>
    <string name="number_of_people_needed">NUMBER OF PEOPLE NEEDED</string>
    <string name="button">Button</string>
    <string name="start_date">START DATE</string>
    <string name="job_giver_nane">JOB GIVER NANE</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="add">ADD</string>
</resources>